# how_much_data

./: .gitignore  .meson.build.swp  LICENSE  README.md  meson.build
R/: Pinelis_Taleb_Graph.R
convolution_test/: convolution_test.cpp  exponential_distribution.h  lognormal_distribution.h  meson.build  p_spline.h  pareto_distribution.h  student_t_distribution.h  taleb_results.h
doc/: Doxyfile.in  README.md  cfX_LogNormal.R  meson.build
how_much_data.xcodeproj/: project.pbxproj
how_much_data.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
how_much_data.xcodeproj/xcshareddata/xcschemes/: convolution_test.xcscheme  log_normal_test.xcscheme  monte_carlo_test.xcscheme
how_much_data.xcodeproj/xcuserdata/jdunn.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
how_much_data.xcodeproj/xcuserdata/jdunn.xcuserdatad/xcschemes/: xcschememanagement.plist
include/: adaptive_integration.h  adaptive_integration_impl.h  exponential_distribution.h  gauss_kronrod.h  gauss_kronrod_impl.h  lambert_w.h  lognormal_distribution.h  myFloat.h  normal_switch_mean.h  normal_switch_stddev.h  pareto_distribution.h  student_t_distribution.h
lognormal_test/: lognormal_test.cpp  meson.build
monte_carlo_test/: meson.build  monte_carlo_test.cpp
output/: .convolution_test_0.01_0.001_25000000.out.swp  convolution_test_0.01_0.001_25000000.out  convolution_test_0.01_1e-05_250000000.out  lognormal_test_fourier_lnx.out  lognormal_test_fourier_x.out  lognormal_test_lambert_w.out  lognormal_test_spline.out  monte_carlo_test_1000000.out  monte_carlo_test_10000000.out  monte_carlo_test_100000000.out  monte_carlo_test_10000000000.out  pinelis_taleb_dump.out  pinelis_taleb_test.out
output/doc/html/: annotated.html  classLower-members.html  classLower.html  classPinelisTalebIntegrand-members.html  classPinelisTalebIntegrand.html  classPinelisTalebIntegrand_3_01exponential__distribution_3_4_01_4-members.html  classPinelisTalebIntegrand_3_01exponential__distribution_3_4_01_4.html  classPinelisTalebIntegrand_3_01pareto__distribution_3_4_01_4-members.html  classPinelisTalebIntegrand_3_01pareto__distribution_3_4_01_4.html  classUpper-members.html  classUpper.html  classes.html  classpareto__distribution-members.html  classpareto__distribution.html  classpareto__distribution_1_1param__type-members.html  classpareto__distribution_1_1param__type.html  convolution__test_8cpp.html  dir_8d3f50404bc2c6ffc5b87744d61d5702.html  dir_917d1241e73175bf9c2253909775b3ff.html  dir_a36d538f5c7328fa5013eac1637259fb.html  dir_b2b2892bbc139b68f6ae23bd965c7e2f.html  dir_d44c64559bbebec7f509842c48db8b23.html  exponential__distribution_8h.html  exponential__distribution_8h_source.html  files.html  functions.html  functions_func.html  functions_rela.html  functions_vars.html  globals.html  globals_defs.html  globals_func.html  globals_vars.html  hierarchy.html  index.html  lognormal__distribution_8h.html  lognormal__distribution_8h_source.html  lognormal__test_8cpp.html  menudata.js  monte__carlo__test_8cpp.html  (+19 more)
output/doc/html/search/: all_1.js  all_11.js  all_12.js  all_2.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  defines_0.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  (+16 more)
output/doc/latex/: annotated.tex  classLower.tex  classPinelisTalebIntegrand.tex  classPinelisTalebIntegrand_3_01exponential__distribution_3_4_01_4.tex  classPinelisTalebIntegrand_3_01pareto__distribution_3_4_01_4.tex  classUpper.tex  classpareto__distribution.tex  classpareto__distribution_1_1param__type.tex  convolution__test_8cpp.tex  exponential__distribution_8h.tex  files.tex  hierarchy.tex  index.tex  lognormal__distribution_8h.tex  lognormal__test_8cpp.tex  monte__carlo__test_8cpp.tex  pareto__distribution_8h.tex  pinelis__taleb__test_8cpp.tex  refman.aux  refman.idx  refman.ilg  refman.ind  refman.out  refman.tex  refman.toc  structJob.tex  structKappaResult.tex  structKappaResults.tex  structNumpunct.eps  structNumpunct.tex  structexponential__distribution.eps  structexponential__distribution.tex  structlognormal__distribution.eps  structlognormal__distribution.tex  structstudent__t__distribution.eps  structstudent__t__distribution.tex  student__t__distribution_8h.tex
pareto_test/: main.cpp  meson.build  pareto_distribution.h  student_t_distribution.h
pareto_test.xcodeproj/: project.pbxproj
pareto_test.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
pareto_test.xcodeproj/xcuserdata/jdunn.xcuserdatad/xcschemes/: xcschememanagement.plist
pinelis_taleb_test/: meson.build  pinelis_taleb_test.cpp
